--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 ::before {
   box-sizing: border-box;
 }
+body{
+    overflow-x: hidden;
+}
 
 /*------------------------------
 --------Hero area start-------*/
@@ -15,31 +18,31 @@ header {
   padding: 20px 20px;
 }
 
-.nav-link{
-    list-style-type: none;
-    margin: auto;
+.nav-link {
+  list-style-type: none;
+  margin: auto;
 }
 .nav-link li {
-    display: inline-block;
-    padding:0 20px ;
+  display: inline-block;
+  padding: 0 20px;
 }
-.nav-link a:hover{
-    color: #ff4136;   
+.nav-link a:hover {
+  color: #ff4136;
 }
-.nav-link a{
-    transition: all 0.3s ease-out 0s;
-    text-decoration: none;
-    color: rgb(189, 188, 188);
+.nav-link a {
+  transition: all 0.3s ease-out 0s;
+  text-decoration: none;
+  color: rgb(189, 188, 188);
 }
 .nav_icon_box i {
   font-size: 22px;
   padding: 5px 7px;
   margin: 5px 5px;
 }
-.icon:hover{
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    color: rgb(251, 59, 59) !important;
+.icon:hover {
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  color: rgb(251, 59, 59) !important;
 }
 .nav_icon_box i:not(:last-child) {
   color: rgb(189, 188, 188);
@@ -47,86 +50,85 @@ header {
 .nav_icon_box i:last-child {
   border: 2px solid black;
 }
-.toggle-nav-icon{
-    position: relative;
+.toggle-nav-icon {
+  position: relative;
 }
-.toggle-nav{
-    position: absolute;
-    left: -133px;
-    top: 58px;
-    z-index: 9999;
-    background-color: #0c1923;
-    list-style-type: none;
-    padding-left: 0 !important;
-    animation: growDown .5s ease-in-out forwards;
-    transform-origin: top center;
+.toggle-nav {
+  position: absolute;
+  left: -133px;
+  top: 58px;
+  z-index: 9999;
+  background-color: #0c1923;
+  list-style-type: none;
+  padding-left: 0 !important;
+  animation: growDown 0.5s ease-in-out forwards;
+  transform-origin: top center;
 }
 @keyframes growDown {
-    0% {
-        transform: scaleY(0)
-    }
-    80% {
-        transform: scaleY(1.1)
-    }
-    100% {
-        transform: scaleY(1)
-    }
+  0% {
+    transform: scaleY(0);
+  }
+  80% {
+    transform: scaleY(1.1);
+  }
+  100% {
+    transform: scaleY(1);
+  }
 }
 
-.toggle-nav li{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 95px;
-    padding-left: 10px;
-    border-bottom: 1px solid rgb(211, 210, 210);
+.toggle-nav li {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 95px;
+  padding-left: 10px;
+  border-bottom: 1px solid rgb(211, 210, 210);
 }
-.toggle-nav li:hover{
-    background-color: #192e3e;
+.toggle-nav li:hover {
+  background-color: #192e3e;
 }
-.toggle-nav a{
-    color: white;
-    font-size: 15px;
-    font-weight: 300;
-    text-decoration: none;
+.toggle-nav a {
+  color: white;
+  font-size: 15px;
+  font-weight: 300;
+  text-decoration: none;
 }
-.carousel-caption .slider-heading{
-    color: black;
-    
+.carousel-caption .slider-heading {
+  color: black;
 }
-.carousel-link{
-    font-size: 10px;
-    font-weight: 300 !important;
+.carousel-link {
+  font-size: 10px;
+  font-weight: 300 !important;
 }
-.slider-heading span{
-    color: #ff4136;
+.slider-heading span {
+  color: #ff4136;
 }
-.carousel-caption a{
-    color: #000;
-    font-family: Dosis;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 30px;
-    padding-right: 30px;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: all 0.3s ease 0s;
-    position: relative;
+.carousel-caption a {
+  color: #000;
+  font-family: Dosis;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 30px;
+  padding-right: 30px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.3s ease 0s;
+  position: relative;
 }
-.carousel-caption a::before{
-    background: #000 none repeat scroll 0 0;
-    content: "";
-    height: 1px;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transition: all 0.3s ease 0s;
-    width: 20px;
+.carousel-caption a::before {
+  background: #000 none repeat scroll 0 0;
+  content: "";
+  height: 1px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transition: all 0.3s ease 0s;
+  width: 20px;
 }
-.carousel-caption a:hover{
-    color: #ff4136;
+.carousel-caption a:hover {
+  color: #ff4136;
 }
 .carousel-caption a:hover:before {
-    background: #ff4136 none repeat scroll 0 0;
+  background: #ff4136 none repeat scroll 0 0;
 }
 button i {
   color: black;
@@ -135,41 +137,158 @@ button i {
 /*------------------------------
 --------Hero area end---------*/
 
+/*------------------------------
+-----features area start------*/
+.features-container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+.thumb img{
+    transition: all 300ms ease-in 0s;
+}
+.banner{
+    position: relative;
+}
+.content{
+    position: absolute;
+    top: 30px;
+    left: 40px;
+}
+.content h6, .md-content h6{
+    color: #ff4136;
+    font-family: "Arizonia",cursive;
+    font-weight: 400;
+}
+.content h3,.md-content h3{
+    font-size: 22px;
+    color: #303030;
+}
+.content a, .md-content a{
+    text-decoration: none;
+    color: #3a3a3a;
+    font-family: Dosis;
+    font-size: 14px;
+    font-weight: 400;
+    padding-right: 30px;
+    position: relative;
+    text-transform: uppercase;
+    transition: all 0.5s ease 0s;
+}
+.content a::before, .md-content a::before{
+    background: #000 none repeat scroll 0 0;
+    content: "";
+    height: 1px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transition: all 0.5s ease 0s;
+    width: 20px;
+}
+.content a:hover , .md-content a:hover{
+  color: #ff4136;
+}
+.content a:hover:before ,.md-content a:hover:before {
+  background: #ff4136 none repeat scroll 0 0;
+}
+.second-row{
+    padding-top: 30px;
+}
+.md-banner:not(:nth-child(2)){
+    border: 1px solid #e1e1e1;
+}
+.md-banner:nth-child(2){
+    border-top: 1px solid #e1e1e1;
+    border-bottom: 1px solid #e1e1e1;
+}
+.md-banner{
+    position: relative;
+}
+.md-content{
+    position: absolute;
+    top: 60px;
+    left: 20px;
+}
+/*------------------------------
+------features area end-------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /******************************************
 ******* Responsive design Section ********/
 
-/* iPad or tablet */
-@media only screen  and (min-width: 481px) and (max-width: 768px) {
-    
+/* mobile */
+@media only screen and  (max-width: 481px) {
+    .xmt-40{
+    margin-top: 40px !important;
+    }
 }
+
+
+
+/* iPad or tablet */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+}
+
+
+
 /* small screen or laptop  */
-@media only screen and (min-width:769px) {
-    header{
-        padding-left: 100px;
-        padding-right: 100px;
-    }
-    button i {
-        color: black;
-        font-size: 40px;
-    }
-    .slide-1 {
-        right: 0% !important;
-        top: 30%;
-    }
-    .slide-2{
-        top: 30%;
-        left: 0% !important;
-        /* text-align: left !important; */
-    }
-    .slide-3{
-        top: 30%;
-        left:0% !important;
-        /* text-align: left !important; */
-    }
-    .carousel-caption .slide-1{
-        left: 33% !important;
-    }
-    .carousel-caption .slider-heading{
-        font-size: 60px;
-    }
+@media only screen and (min-width: 769px) {
+  header {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  button i {
+    color: black;
+    font-size: 40px;
+  }
+  .slide-1 {
+    right: 0% !important;
+    top: 30%;
+  }
+  .slide-2 {
+    top: 30%;
+    left: 0% !important;
+  }
+  .slide-3 {
+    top: 30%;
+    left: 0% !important;
+  }
+  .carousel-caption .slide-1 {
+    left: 33% !important;
+  }
+  .carousel-caption .slider-heading {
+    font-size: 60px;
+  }
+
+  /*------------------------------
+  -----features area start------*/
+  .features-container {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .content {
+    top:70px;
+    left: 70px;
+  }
+  .content h3{
+    font-size: 30px;
+    font-weight: 300 !important;
+  }
+  /*------------------------------
+  ------features area end-------*/
 }
