--- a/style.css
+++ b/style.css
@@ -304,8 +304,7 @@ footer {
 }
 .f-box-1 p,
 .f-box-3 span,
-.cpoyright p 
-{
+.cpoyright p {
   color: #666666;
   font-size: 14px;
   line-height: 26px;
@@ -332,26 +331,26 @@ footer {
   border: #ff4136;
   transition: all 0.3s ease-out 0s;
 }
-.footer-icon-box{
+.footer-icon-box {
   color: #a9a7a7;
   font-size: 20px;
 }
-.footer-icon-box i{
+.footer-icon-box i {
   margin: 2px 10px;
 }
-.footer-icon-box i:hover{
+.footer-icon-box i:hover {
   color: #ff4136;
-  transition: all .5s ease-out 0s;
+  transition: all 0.5s ease-out 0s;
   cursor: pointer;
 }
- .row{
+.row {
   align-items: center;
 }
-.footer-link{
+.footer-link {
   display: flex;
   justify-content: center;
 }
-.footer-link a{
+.footer-link a {
   color: #666666;
   padding: 0 20px;
   text-decoration: none;
@@ -359,7 +358,117 @@ footer {
 /*------------------------------
 -------footer area end--------*/
 
+/*************************Home Page Design End**************************/
 
+/************************About Page Design start************************/
+
+/*------------------------------
+-------about area end--------*/
+.about {
+  overflow-x: hidden;
+}
+.img-div {
+  position: relative;
+}
+.img-div img {
+  height: 300px;
+}
+.info-div {
+  position: absolute;
+  top: calc(50% - 35px);
+  left: calc(50% - 70px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.info-div h2 {
+  color: #343434;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+.info-div a, .info-div span{
+  text-decoration: none;
+  color: #666666;
+  font-size: 18px;
+  font-weight: 400;
+}
+.info-div span {
+  padding: 0 10px;
+}
+.info-div a:hover{
+  cursor: pointer;
+  color: #ff4136;
+  transition: all , .3s ease-in 0s;
+}
+.welcome-text-box{
+  text-align: center;
+  padding: 100px 0;
+}
+.welcome-text-box p {
+  padding: 30px 0;
+  margin: 0 auto;
+  color: #87898a;
+  font-weight: 400;
+  font-size: 15px;
+}
+.welcome-text-box button{
+  margin-top: 20px;
+  text-transform: uppercase;
+  border: 1px solid #c5c5c5;
+  color: #979797;
+}
+.welcome-text-box button:hover{
+  background-color: #ff4136;
+  color: #ffffff;
+}
+.video-bg{
+  position: relative;
+}
+.video-bg i{
+  position: absolute;
+  font-size: 20px;
+  background-color: white;
+  padding: 20px 22px;
+  border-radius: 50%;
+  top: calc(50% - 35px);
+  left: calc(50% - 35px);
+}
+.video-bg i:hover{
+  color: #ff4136;
+  cursor: pointer;
+  transition: all .3s ease-in 0s;
+}
+.info-section{
+  background-color: #f4f4f4;
+}
+.info-heading{
+  color: #505050;
+}
+.info-row{
+  padding-top: 30px;
+}
+.info-box{
+  display: flex;
+}
+.info-box i{
+  font-size: 40px;
+  color: #505050;
+}
+.info-box-text{
+  padding-left: 20px;
+  color: #505050;
+}
+.info-box-text h3{
+  font-size: 22px;
+}
+.info-box-text p{
+  font-size: 14px;
+}
+
+/*------------------------------
+-------about area end--------*/
 
 
 
@@ -442,7 +551,7 @@ footer {
   .Btn {
     padding: 5px 20px;
   }
-  .list{
+  .list {
     padding-bottom: 100px;
   }
   /*------------------------------
@@ -456,9 +565,15 @@ footer {
     font-size: 22px;
     padding-bottom: 30px;
   }
-  .footer-link{
+  .footer-link {
     justify-content: flex-end;
   }
   /*------------------------------
   ------footer area end---------*/
+
+  /* about page*/
+
+  .welcome-text-box p {
+    width: 53%;
+  }
 }
