--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,3 @@
-
 /******************************************
 ******* Responsive design Section ********/
 
@@ -7,6 +6,9 @@
   .xmt-40 {
     margin-top: 40px !important;
   }
+  .spcial-input-left, .spcial-input-right{
+    padding: 0 !important;
+}
 }
 
 /* iPad or tablet */
@@ -41,6 +43,17 @@
   }
   .team--info i {
     padding: 0 5px;
+  }
+
+  /* contact page  */
+  .spcial-input-left {
+    padding-left: 0 !important;
+  }
+  .spcial-input-right {
+    padding-right: 0 !important;
+  }
+  .map{
+    height: 500px !important;
   }
 }
 
@@ -139,5 +152,17 @@
     background-color: rgba(255, 255, 255, 0.541);
     margin: 0 20px;
     border-radius: 50%;
+  }
+
+  /* contact page */
+  .spcial-input-left {
+    padding-left: 0 !important;
+  }
+  .spcial-input-right {
+    padding-right: 0 !important;
+  }
+  .map{
+    top: 0;
+    height: 500px !important;
   }
 }
