--- a/blog.css
+++ b/blog.css
@@ -19,8 +19,8 @@
   color: #343434;
   font-size: 36px;
   font-weight: 400;
-  line-height: 30px;
-  margin-bottom: 20px;
+line-height: 30px;
+margin-bottom: 20px;
 }
 .info-div a,
 .info-div span {
@@ -40,6 +40,10 @@
 
 
 /* post design */
+
+.row > div{
+  padding: 0 !important;
+}
 .blog-card{
     position: relative;
 }
@@ -85,7 +89,7 @@
     border: none;
     background-color: transparent;
     padding-top: 10px;
-    color: #666666;
+    color: #2c2c2c;
     transition: color .4s ease 0s;
 }
 .blog-details button:hover{
