--- a/responsive.css
+++ b/responsive.css
@@ -6,9 +6,10 @@
   .xmt-40 {
     margin-top: 40px !important;
   }
-  .spcial-input-left, .spcial-input-right{
+  .spcial-input-left,
+  .spcial-input-right {
     padding: 0 !important;
-}
+  }
 }
 
 /* iPad or tablet */
@@ -52,7 +53,7 @@
   .spcial-input-right {
     padding-right: 0 !important;
   }
-  .map{
+  .map {
     height: 500px !important;
   }
 }
@@ -161,8 +162,20 @@
   .spcial-input-right {
     padding-right: 0 !important;
   }
-  .map{
+  .map {
     top: 0;
     height: 500px !important;
+  }
+
+  /* blog details */
+  blockquote::before {
+    background: #4c4c4c none repeat scroll 0 0;
+    content: "";
+    font-size: 30px;
+    height: 70% !important;
+    left: 0;
+    position: absolute;
+    top: 9px;
+    width: 2px;
   }
 }
