--- a/blogDetails.css
+++ b/blogDetails.css
@@ -42,6 +42,9 @@
 .blog__post {
   margin: 100px 0;
 }
+.row{
+  align-items: flex-start;
+}
 .post-tumb {
   position: relative;
 }
@@ -158,6 +161,7 @@ blockquote::before {
 }
 .comment-title-date {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 .comment-title-date h5 {
@@ -296,11 +300,12 @@ textarea:focus {
 }
 .tag span{
   padding: 7px 15px;
-  border: 1px solid #666666;
+  border: 1px solid #d8d8d8;
   display: inline-block;
   margin: 3px;
   font-size: 14px;
   color: #666666;
+  text-transform: uppercase;
 }
 .tag span:hover{
   cursor: pointer;
