--- a/wishlish.css
+++ b/wishlish.css
@@ -1,6 +1,6 @@
 /*------------------------------
 -------about area end--------*/
-.cart {
+.wishlist {
   overflow-x: hidden;
 }
 .img-div {
@@ -12,7 +12,7 @@
 .info-div {
   position: absolute;
   top: calc(50% - 45px);
-  left: calc(50% - 75px);
+  left: calc(50% - 80px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,24 +41,10 @@
 }
 
 
-
-.cart-section{
+.wishlist-section{
     margin-top: 100px;
     margin-bottom: 100px;
 }
-
-.cart-data-info{
-    margin-bottom: 100px;
-}
-.cart-header{
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #666666;
-    padding-bottom: 0px;
-    align-items: baseline;
-    flex-wrap: wrap;
-}
-
 .single-cart{
     margin: 20px 0;
     display: flex;
@@ -86,13 +72,18 @@
     margin: 0 !important;
 }
 
-.delete-icon{
-    color: #666666;
+.icon{
     transition: all .3s ease 0s;
-    padding-right: 30px;
+    margin-right: 20px;
 }
-.delete-icon:hover{
+.cart{
+    color: rgb(10, 182, 10) !important;
+}
+.delete{
     color: #ff4136;
+}
+.icon:hover{
+    color: #666666 !important;
 }
 
 .product-info p{
@@ -106,44 +97,14 @@
 .brand-name{
     color: #666666;
 }
-
-.cart-btn > button {
-    margin-right: 0px;
-}
-.cart-btn > button,
-.apply,
-.procces-btn{
-    border: none;
-    padding: 8px 14px;
+.cart-btn > button{
     color: white;
+    border: none;
     background-color: black;
-    text-transform: uppercase;
-    transition:all .4s ease 0s;
+    padding: 7px 15px;
+    margin-right: 40px;
+    transition: all .3s ease 0s;
 }
-.cart-btn > button:hover,
-.apply:hover,
-.procces-btn:hover{
+.cart-btn > button:hover{
     background-color: #ff4136;
-}
-.coupon-text{
-    margin-top: 40px;
-    margin-bottom: 20px;    
-}
-.coupon-text > p{
-    margin: 0 !important;
-    color: #666666;
-}
-.coupon-input > input{
-    padding: 6px ;
-    margin-right: 5px;
-}
-.coupon-input > input:focus{
-    outline: none;
-}
-.cart-box p{
-    color: #666666;
-    text-transform: uppercase;
-}
-.total{
-    font-size: 20px;
 }
