--- a/checkout.css
+++ b/checkout.css
@@ -87,10 +87,10 @@ form > select:focus {
 .pay-method-box {
   margin-top: 30px;
 }
-.card-input{
-    background-color: #f1f1f1f1;
-    margin: 20px 10px;
-    width: 95%;
+.card-input {
+  background-color: #f1f1f1f1;
+  margin: 20px 10px;
+  width: 95%;
 }
 .card-validation > input {
   width: 30%;
@@ -99,16 +99,36 @@ form > select:focus {
   color: #666666;
 }
 
-.order-btn{
-    border: none;
-    background-color: #ff4136;
-    padding: 10px ;
-    color: white;
-    font-size: 20px;
-    width: 95%;
-    margin: 10px;
-    transition: all .3s ease 0s;
+.order-btn {
+  border: none;
+  background-color: #ff4136;
+  padding: 10px;
+  color: white;
+  font-size: 20px;
+  width: 95%;
+  margin: 10px;
+  transition: all 0.3s ease 0s;
 }
-.order-btn:hover{
-    background-color: #24ca8a;
+.order-btn:hover {
+  background-color: #24ca8a;
+}
+
+.summery-item-box {
+  padding: 20px;
+  border-radius: 5px;
+  border: 1px solid #b6b5b5;
+  margin: 25px 0px;
+}
+.summery-item {
+  border-bottom: 1px solid #b6b5b5;
+  margin-bottom: 20px;
+}
+.checkout-cart-img > img {
+  height: 50px;
+  width: 50px;
+}
+.checkout-text-box > p {
+  margin: 0;
+  padding-left: 20px;
+  color: #666666;
 }
