--- a/product-details.css
+++ b/product-details.css
@@ -70,7 +70,8 @@
     padding: 0 !important;
 }
 .details-color-list li , .details-size-list li{
-    margin-right: 10px;
+    margin-right: 15px;
+    cursor: pointer;
 }
 .details-color-list li::before{
     content: "";
@@ -78,12 +79,66 @@
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    background-color: #ff4136;
 }
-.details-price{
-    
+.details-color-list .black::before{
+    background-color: black;
+}
+.details-color-list .red::before{
+    background-color: red;
+}
+.details-color-list .green::before{
+    background-color: green;
+}
+.details-color-list .yellow::before{
+    background-color: yellow;
+}
+.details-size-list{
+    color: #666666;
+}
+.details-size-list li:hover{
+    color: #ff4136;
+}
+.details-price .old-price{
+    font-size: 18px !important;
+}
+.details-price .new-price{
+    font-size: 25px;
+}
+.color-choose-heading, .size-heading{
+    font-size:23px ;
+    color: #666666;
+}
+.details-quantity{
+    color: #666666;
+}
+.details-quantity i{
+    margin: 0 20px;
 }
 .details-quantity input{
     width: 25px;
     padding-left:5px;
+    color: #666666;
 }
+.details-btn{
+    margin-top: 50px;
+}
+.details-btn button {
+    color: #666666;
+    background-color: transparent;
+    border: 1px solid #666666;
+    padding: 10px 20px;
+    transition: .3s all ease 0s;
+}
+.details-btn  i{
+    font-size: 15px;
+    color: #666666;
+    border: 1px solid #666666;
+    padding: 14px ;
+    margin-left: 20px;
+    transition: .3s all ease 0s;
+}
+.details-btn button:hover, .details-btn i:hover{
+    color: #ff4136;
+    border: 1px solid #ff4136;
+}
+
