--- a/responsive.css
+++ b/responsive.css
@@ -82,8 +82,8 @@
 /* small screen or laptop  */
 @media only screen and (min-width: 992px) {
   header {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 100px !important;
+    padding-right: 100px !important;
   }
   button i {
     color: black;
