--- a/about.css
+++ b/about.css
@@ -1,5 +1,14 @@
 /************************About Page Design start************************/
-
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
 /*------------------------------
 -------about area end--------*/
 .about {
