--- a/blog.css
+++ b/blog.css
@@ -1,3 +1,15 @@
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+/*-------------------------------
+------ header design start-----*/
 .blog{
   overflow-x: hidden;
 }
@@ -37,9 +49,12 @@ margin-bottom: 20px;
   color: #ff4136;
   transition: all, 0.3s ease-in 0s;
 }
+/*-------------------------------
+------ header design end ------*/
 
 
-/* post design */
+/*-------------------------------
+----blog post design start-----*/
 
 .row > div{
   padding: 0 !important;
@@ -66,7 +81,7 @@ margin-bottom: 20px;
     margin: 0 !important;
 }
 .date p{
-    margin-bottom: 2px !important;
+  margin-bottom: 2px !important;
     font-weight: 300;
 }
 
@@ -79,20 +94,24 @@ margin-bottom: 20px;
     margin: 0 !important;
     overflow: hidden;
     color: #666666;
-}
+  }
 .author {
-    font-size: 12px;
-    color: #666666;
+  font-size: 12px;
+  color: #666666;
     padding-bottom: 10px;
 }
 .blog-details button{
-    border: none;
-    background-color: transparent;
-    padding-top: 10px;
-    color: #2c2c2c;
-    transition: color .4s ease 0s;
+  font-size: 17px !important;
+  border: none;
+  background-color: transparent;
+  padding-top: 10px;
+  color: #666666;
+  transition: color .4s ease 0s;
 }
 .blog-details button:hover{
     color: #ff4136;
 }
+
+/*-------------------------------
+----blog post design start-----*/
 
