--- a/blogDetails.css
+++ b/blogDetails.css
@@ -1,3 +1,14 @@
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
 .blogDetails {
   overflow-x: hidden;
 }
