--- a/checkout.css
+++ b/checkout.css
@@ -1,3 +1,14 @@
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
 /*------------------------------
 -------about area end--------*/
 .checkout {
@@ -11,7 +22,7 @@
 }
 .info-div {
   position: absolute;
-  top: calc(50% - 45px);
+  top: calc(50% - 30px);
   left: calc(50% - 90px);
   display: flex;
   flex-direction: column;
