--- a/index.css
+++ b/index.css
@@ -8,13 +8,12 @@
 ::before {
   box-sizing: border-box;
 }
-body {
-  /* overflow-x: hidden; */
-}
+
 .active {
   border: none !important;
   color: #ff4136 !important;
 }
+
 /*------------------------------
 -----features area start------*/
 .features-container {
@@ -128,6 +127,9 @@ body {
 }
 .card-details {
   padding-top: 30px;
+}
+.card-details a{
+  text-decoration: none;
   color: #192e3e;
 }
 .card-details h5:hover {
