--- a/login-register.css
+++ b/login-register.css
@@ -1,3 +1,15 @@
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
+
 .login_register{
     display: flex;
     flex-direction: column;
