--- a/wishlish.css
+++ b/wishlish.css
@@ -1,3 +1,14 @@
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
 /*------------------------------
 -------about area end--------*/
 .wishlist {
