--- a/about.css
+++ b/about.css
@@ -9,6 +9,14 @@
 ::before {
   box-sizing: border-box;
 }
+:root{
+  --black: #000000;
+  --light--black: #333333;
+  --gray: #666666;
+  --light--gray: #9c9b9b;
+  --extra--light--gray: #c1c1c1;
+  --main--color: #ff4134;
+}
 /*------------------------------
 -------about area end--------*/
 .about {
@@ -23,13 +31,13 @@
 .info-div {
   position: absolute;
   top: calc(50% - 35px);
-  left: calc(50% - 70px);
+  left: calc(50% - 80px);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .info-div h2 {
-  color: #343434;
+  color: var(--light--black);
   font-size: 36px;
   font-weight: 400;
   line-height: 30px;
@@ -38,7 +46,7 @@
 .info-div a,
 .info-div span {
   text-decoration: none;
-  color: #666666;
+  color: var(--gray);
   font-size: 18px;
   font-weight: 400;
 }
@@ -47,7 +55,7 @@
 }
 .info-div a:hover {
   cursor: pointer;
-  color: #ff4136;
+  color: var(--main--color);
   transition: all, 0.3s ease-in 0s;
 }
 
@@ -60,18 +68,18 @@
 .welcome-text-box p {
   padding: 30px 0;
   margin: 0 auto;
-  color: #87898a;
+  color: var(--light--gray);
   font-weight: 400;
   font-size: 15px;
 }
 .welcome-text-box button {
   margin-top: 20px;
   text-transform: uppercase;
-  border: 1px solid #c5c5c5;
-  color: #979797;
+  border: 1px solid var(--extra--light--gray);
+  color: var(--light--gray);
 }
 .welcome-text-box button:hover {
-  background-color: #ff4136;
+  background-color: var(--main--color);
   color: #ffffff;
 }
 
@@ -94,12 +102,12 @@
   left: calc(50% - 35px);
 }
 .video-bg i:hover {
-  color: #ff4136;
+  color: var(--main--color);
   cursor: pointer;
   transition: all 0.3s ease-in 0s;
 }
 .info-heading {
-  color: #505050;
+  color: var(--gray);
 }
 .info-row {
   padding-top: 30px;
@@ -109,11 +117,11 @@
 }
 .info-box i {
   font-size: 40px;
-  color: #505050;
+  color: var(--gray);
 }
 .info-box-text {
   padding-left: 20px;
-  color: #505050;
+  color: var(--gray);
 }
 .info-box-text h3 {
   font-size: 22px;
